# amr-logic-converter

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
amr_fol_converter/: converter.py  types.py
amr_logic_converter/: AmrContext.py  AmrLogicConverter.py  __init__.py  converter.py  extract_instances_from_amr_tree.py  find_coreferent_instances.py  find_instance_depths.py  find_projective_instances.py  map_contained_coreferences.py  map_instances_lca.py  map_instances_to_nodes.py  parse_symbol_and_alignment.py  parse_value_and_alignment.py  types.py
tests/: test_AmrLogicConverter.py  test_converter.py  test_extract_instances_from_amr_tree.py  test_map_contained_coreferences.py  test_map_instances_lca.py  test_types.py  test_utils.py
tests/__snapshots__/: test_AmrLogicConverter.ambr  test_converter.ambr
