[tool.poetry]
name = "amr-logic-converter"
version = "0.1.0"
description = "Convert Abstract Meaning Representation (AMR) into first-order logic"
authors = ["David Chanin <chanindav@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <4.0"
Penman = "^1.2.2"
nltk = "^3.7"
typing-extensions = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
syrupy = "^3.0.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
